# ffindex

./: LICENSE  Makefile  README  README.md  RELEASE_NOTES
perl5/: FFindex.pm  test.pl
rpm/: ffindex.spec
ruby18/: FFindex.c  extconf.rb
src/: CMakeLists.txt  LICENSE  Makefile  Makefile.osx  fferror.c  fferror.h  ffindex.c  ffindex.h  ffindex_apply.c  ffindex_apply_mpi.c  ffindex_apply_mpi_spawn.c  ffindex_build.c  ffindex_from_fasta.c  ffindex_from_tsv.c  ffindex_get.c  ffindex_modify.c  ffindex_optimize.c  ffindex_posix_search.c  ffindex_posix_search.h  ffindex_unpack.c  ffutil.c  ffutil.h
src/nginx/: config  ngx_http_ffindex_module.c
